# weak_queue

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  bench  bench.r  bench.sh  cmake_install.cmake  experiments.sh  logs_mac.txt  logs_mac_1000_10M.txt  logs_power9.txt  logs_power9_1000_10M.txt  logs_power9_1000_10M_320.txt  logs_power9_1000_iter_10_step.txt  logs_power9_100_1M.txt  logs_power9_20_50M.txt  logs_x86.txt  main.cpp  ms_queue_strong  ms_queue_strong.h  node.h  pointer.h  results_mac.txt  test_seq.cpp
CDSChecker/ms-queue/ms-queue-strong-no-free/: Makefile  ms_queue_strong  ms_queue_strong.cpp  ms_queue_strong.h  node.h  test_2threads  test_2threads.cpp  test_nthreads  test_nthreads.cpp
CDSChecker/ms-queue/ms-queue-weak-no-free/: Makefile  ms_queue_weak.h  node.h  test_2threads.cpp  test_blocking_dequeue.cpp  test_nthreads.cpp
include/: ms_queue_strong.h  node.h
src/: benchmark.cpp  main.cpp
src/ms_queue_strong/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ms_queue_strong.h  node.h  pointer.h  test_par  test_seq
src/ms_queue_strong/tests/: test_cds.cpp  test_par.cpp  test_seq.cpp
src/ms_queue_strong_hazard/: CMakeLists.txt  README.md  hazard_ptr.h  ms_queue_strong.h  node.h
src/ms_queue_strong_hazard/tests/: test_par.cpp  test_seq.cpp
src/ms_queue_strong_nofree/: CMakeLists.txt  README.md  ms_queue_strong.h  node.h
src/ms_queue_weak/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  ms_queue_weak.h  node.h  pointer.h  test_par  test_seq
tests/: test_cds.cpp  test_seq.cpp
(+4 files in other folders)
